gopls/mcpbridge/test/testdata/projects/error/undeclared.go

package main

func UndeclaredUsage() {
	println(undefinedVar) // Undeclared variable
}
